--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,11 @@
                         </div>
                         <div class="form-group">
                             <label>Upload Holidays Excel File</label>
-                            <input type="file" class="form-control-file" name="holidays" required>
+                            <input type="file" class="form-control-file" name="holidays">
+                            <small class="form-text text-muted">
+                            (Optional) <a href="/download-default-holidays" target="_blank">Download default holiday format</a>
+                         </small>
+
                         </div>
                     </div>
                 </div>
@@ -140,6 +144,6 @@
             {{ result|safe }}
         </div>
         {% endif %}
-    </div>
+    </div> 
 </body>
 </html>
